tests/async_iteration/async_iteration.exp
Error ------------------------------------------------------------------------------------------- delegate_yield.js:7:22

Cannot call `delegate_next().next` with `0` bound to `value` because number [1] is incompatible with undefined (default
`next` of unannotated generator function) [2]. [incompatible-type]

   delegate_yield.js:7:22
   7| delegate_next().next(0); // err number ~> void
                           ^ [1]

References:
   delegate_yield.js:1:33
                                      v
   1| async function *delegate_next() {
   2|   async function *inner() {
   3|     var x: void = yield; // ok, unannotated defaults to void
   4|   }
   5|   yield *inner();
   6| }
      ^ [2]


Error ------------------------------------------------------------------------------------------- delegate_yield.js:17:5

Cannot cast `x` to undefined because number [1] is incompatible with undefined [2]. [incompatible-type]

   delegate_yield.js:17:5
   17|     x as void; // error: number ~> void
           ^

References:
   delegate_yield.js:11:11
   11|     yield 0;
                 ^ [1]
   delegate_yield.js:17:10
   17|     x as void; // error: number ~> void
                ^^^^ [2]


Error ------------------------------------------------------------------------------------------ delegate_yield.js:25:17

Cannot assign `yield* inner()` to `x` because number [1] is incompatible with undefined [2]. [incompatible-type]

   delegate_yield.js:25:17
   25|   var x: void = yield *inner(); // error: number ~> void
                       ^^^^^^^^^^^^^^

References:
   delegate_yield.js:23:12
   23|     return 0;
                  ^ [1]
   delegate_yield.js:25:10
   25|   var x: void = yield *inner(); // error: number ~> void
                ^^^^ [2]


Error ------------------------------------------------------------------------------------------------ generator.js:23:5

Cannot cast `line` to undefined because string [1] is incompatible with undefined [2]. [incompatible-type]

   generator.js:23:5
   23|     line as void; // error: string ~> void
           ^^^^

References:
   generator.js:2:23
    2|   readLine(): Promise<string>;
                             ^^^^^^ [1]
   generator.js:23:13
   23|     line as void; // error: string ~> void
                   ^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- return.js:6:3

Cannot cast `result.value` to undefined because string [1] is incompatible with undefined [2]. [incompatible-type]

   return.js:6:3
   6|   result.value as void; // error: string | number ~> void
        ^^^^^^^^^^^^

References:
   return.js:1:38
   1| declare var gen: AsyncGenerator<void,string,void>;
                                           ^^^^^^ [1]
   return.js:6:19
   6|   result.value as void; // error: string | number ~> void
                        ^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- return.js:6:3

Cannot cast `result.value` to undefined because number [1] is incompatible with undefined [2]. [incompatible-type]

   return.js:6:3
   6|   result.value as void; // error: string | number ~> void
        ^^^^^^^^^^^^

References:
   return.js:5:12
   5| gen.return(0).then(result => {
                 ^ [1]
   return.js:6:19
   6|   result.value as void; // error: string | number ~> void
                        ^^^^ [2]


Error --------------------------------------------------------------------------------------------------- return.js:20:5

Cannot cast `result.value` to string because undefined [1] is incompatible with string [2]. [incompatible-type]

   return.js:20:5
     20|     result.value as string; // error: number | void ~> string
             ^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:1867:14
   1867|     +value?: Return,
                      ^^^^^^ [1]
   return.js:20:21
     20|     result.value as string; // error: number | void ~> string
                             ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- return.js:20:5

Cannot cast `result.value` to string because number [1] is incompatible with string [2]. [incompatible-type]

   return.js:20:5
   20|     result.value as string; // error: number | void ~> string
           ^^^^^^^^^^^^

References:
   return.js:15:12
   15|     return 0;
                  ^ [1]
   return.js:20:21
   20|     result.value as string; // error: number | void ~> string
                           ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- throw.js:12:7

Cannot cast `value` to undefined because number [1] is incompatible with undefined [2]. [incompatible-type]

   throw.js:12:7
   12|       value as void; // error: number ~> void
             ^^^^^

References:
   throw.js:3:11
    3|     yield 0;
                 ^ [1]
   throw.js:12:16
   12|       value as void; // error: number ~> void
                      ^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- throw.js:29:7

Cannot cast `value` to undefined because number [1] is incompatible with undefined [2]. [incompatible-type]

   throw.js:29:7
   29|       value as void; // error: number ~> void
             ^^^^^

References:
   throw.js:19:11
   19|     yield 0;
                 ^ [1]
   throw.js:29:16
   29|       value as void; // error: number ~> void
                      ^^^^ [2]



Found 10 errors
